# autoresearch

./: .gitignore  .zenodo.json  INSTALL.md  LICENSE  README.md  pyproject.toml
autoresearch/: __init__.py  analyze.py  audit.py  cli.py  critic.py  helpers.py  init_project.py  loop.py  runner.py  state.py  wizard.py
docs/: multi-metric.md
examples/multi_metric_demo/: README.md  evaluate.py  prepare.py  problem.yaml  solution.py
examples/multi_metric_demo/sample_run/: wizard_state.json
examples/multi_metric_demo/sample_run/critic_logs/: 20260425T165819_c61bb92.jsonl  20260425T165848_c61bb92.jsonl  20260425T165943_c61bb92.jsonl  20260425T170004_82ec557.jsonl
examples/tsp_heuristic/: README.md  evaluate.py  prepare.py  problem.yaml  solution.py
examples/tsp_heuristic/sample_run/: wizard_state.json
examples/tsp_heuristic/sample_run/critic_logs/: 20260425T164403_36bfebc.jsonl  20260425T164411_36bfebc.jsonl  20260425T164627_bf21e61.jsonl  20260425T164651_07ef043.jsonl  20260425T164718_07ef043.jsonl
examples/xgboost_tuning/: README.md  evaluate.py  prepare.py  problem.yaml  solution.py
examples/xgboost_tuning/sample_run/: wizard_state.json
examples/xgboost_tuning/sample_run/critic_logs/: 20260425T164801_62bc0c2.jsonl  20260425T164809_62bc0c2.jsonl  20260425T164847_7d95033.jsonl  20260425T164907_7d95033.jsonl  20260425T164931_2b1a960.jsonl  20260425T164955_70c78b5.jsonl
templates/: problem.yaml.template  program.md.template
